// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components::StatusBubble::StatusBubble mounts with default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 115px;
  max-width: 130px;
  font-weight: 400;
  font-size: 11px;
  text-transform: uppercase;
  color: #ff9800;
}

.c0 svg {
  fill: #ff9800;
}

.c0 div {
  margin-left: 8px;
  height: 14px;
}

@media (min-width:0) and (max-width:599px) {
  .c0 div {
    height: 18px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c0 div {
    height: 18px;
  }
}

<div
  class="c0"
  color="$md-orange-500"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root-1 MuiSvgIcon-fontSizeSmall-8"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
    />
  </svg>
  <div>
    PENDING
  </div>
</div>
`;

exports[`Components::StatusBubble::StatusBubble renders correctly when a status is passed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 115px;
  max-width: 130px;
  font-weight: 400;
  font-size: 11px;
  text-transform: uppercase;
  color: #00c853;
}

.c0 svg {
  fill: #00c853;
}

.c0 div {
  margin-left: 8px;
  height: 14px;
}

@media (min-width:0) and (max-width:599px) {
  .c0 div {
    height: 18px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c0 div {
    height: 18px;
  }
}

<div
  class="c0"
  color="$md-green-a700"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root-1 MuiSvgIcon-fontSizeSmall-8"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
  <div>
    running
  </div>
</div>
`;
